<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">


    <TextView
        android:id="@+id/textView"
        android:layout_width="229dp"
        android:layout_height="68dp"
        android:fontFamily="sans-serif"
        android:text="@string/profile"
        android:textColor="@color/red"
        android:textSize="40sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <ImageView
        android:id="@+id/navigationbar2"
        android:layout_width="368dp"
        android:layout_height="298dp"
        android:layout_marginTop="544dp"
        android:contentDescription="@string/design_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_design4_" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:contentDescription="@string/icon_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/ic_home" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_menu"
        android:contentDescription="@string/icon_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/icon_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_person" />

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="235dp"
        android:layout_height="208dp"
        android:layout_marginBottom="400dp"
        android:contentDescription="@string/icon_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/profile" />

    <ImageView
        android:id="@+id/change_profile"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:layout_marginBottom="408dp"
        android:contentDescription="@string/icon_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/camera" />

    <LinearLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#c2bdbd"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </LinearLayout>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="352dp"
        android:layout_height="53dp"
        android:layout_marginTop="360dp"
        android:autofillHints="AUTOFILL_HINT_NAME"
        android:background="#c2bdbd"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="352dp"
        android:layout_height="53dp"
        android:layout_marginTop="432dp"
        android:autofillHints="AUTOFILL_HINT_PHONE"
        android:background="#c2bdbd"
        android:hint="@string/handphone"
        android:inputType="phone"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>