<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tombol1">

    <ImageView
        android:id="@+id/navigationbar"
        android:layout_width="368dp"
        android:layout_height="298dp"
        android:layout_marginTop="544dp"
        android:contentDescription="@string/design_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_design4_" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:contentDescription="@string/icon_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/ic_home" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_menu"
        android:contentDescription="@string/icon_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/icon_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_person" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="67dp"
        android:text="@string/menu"
        android:textColor="@color/red"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="297dp"
        android:layout_height="54dp"
        android:layout_marginTop="116dp"
        android:contentDescription="@string/design_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/line_menu" />

    <ImageView
        android:id="@+id/bgmenu"
        android:layout_width="267dp"
        android:layout_height="163dp"
        android:layout_marginTop="148dp"
        android:contentDescription="@string/design_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_menu" />

    <ImageView
        android:id="@+id/bgmenu2"
        android:layout_width="267dp"
        android:layout_height="163dp"
        android:layout_marginTop="288dp"
        android:contentDescription="@string/design_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_menu" />

    <ImageView
        android:id="@+id/cappucino2"
        android:layout_width="138dp"
        android:layout_height="102dp"
        android:layout_marginTop="176dp"
        android:contentDescription="@string/design_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.743"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cappucino" />

    <TextView
        android:layout_width="169dp"
        android:layout_height="72dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/cappucino"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <TextView
        android:layout_width="71dp"
        android:layout_height="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/price_cappucino"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="117dp"
        android:layout_height="122dp"
        android:layout_marginTop="308dp"
        android:contentDescription="@string/design_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/creamy_latte" />

    <TextView
        android:layout_width="169dp"
        android:layout_height="72dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/creamy"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494" />

    <TextView
        android:layout_width="71dp"
        android:layout_height="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/price_cappucino"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

    <ImageView
        android:id="@+id/creamy"
        android:layout_width="117dp"
        android:layout_height="122dp"
        android:layout_marginTop="308dp"
        android:contentDescription="@string/design_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/creamy_latte" />

    <ImageView
        android:id="@+id/plus2"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:layout_marginTop="376dp"
        android:contentDescription="@string/design_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plus_product" />

    <ImageView
        android:id="@+id/plus1"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:layout_marginTop="236dp"
        android:contentDescription="@string/design_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plus_product" />

    <ImageView
        android:id="@+id/bgmenu3"
        android:layout_width="267dp"
        android:layout_height="163dp"
        android:layout_marginTop="428dp"
        android:contentDescription="@string/design_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_menu" />

    <ImageView
        android:id="@+id/croissant"
        android:layout_width="117dp"
        android:layout_height="122dp"
        android:layout_marginTop="448dp"
        android:contentDescription="@string/design_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/croissant" />

    <TextView
        android:layout_width="138dp"
        android:layout_height="81dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/croissant"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712" />

    <TextView
        android:layout_width="71dp"
        android:layout_height="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/price_croissant"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763" />

    <ImageView
        android:id="@+id/plus3"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:layout_marginTop="520dp"
        android:contentDescription="@string/design_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plus_product" />


</androidx.constraintlayout.widget.ConstraintLayout>